# vibe

./: .gitignore  README.md  USEME.md  pyproject.toml
tests/: test_tools.py
vibe/: __init__.py  __main__.py  config.py  errors.py  safety.py  trace.py
vibe/agent/: __init__.py  loop.py  prompt.py
vibe/llm/: __init__.py  ollama.py
vibe/tools/: __init__.py  base.py  files.py  search.py  shell.py
vibe/ui/: __init__.py  render.py  repl.py
